// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawingModel goto undos 2 1`] = `
Object {
  "2": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "fec30c95ff6c682f3ef130092e8ea6bf",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 1,
      "y": 0,
    },
  },
  "4": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "66e29cb43002aa5df93024bad760aaa3",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "5854dfbff9e20ae5d21765f2f7ab77d7",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 5,
      "y": 1,
    },
  },
}
`;

exports[`DrawingModel goto undos 2 2`] = `
Object {
  "5854dfbff9e20ae5d21765f2f7ab77d7": "
--------
RRRR----
--------
--------",
  "66e29cb43002aa5df93024bad760aaa3": "
RRRRRR--
------RR
--------
--------",
  "c7f3904bc0462e034c9c59ba4430b183": "
--------
--------
--------
--------",
  "fec30c95ff6c682f3ef130092e8ea6bf": "
RRRR----
--------
--------
--------",
}
`;

exports[`DrawingModel goto undos and snapshots 1`] = `
Object {
  "1": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "43e026a0d11dfafee7d6e881bdc93730",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 0,
      "y": 0,
    },
  },
  "5": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "38f95551515cc94f8bb8e37a63954d49",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 3,
      "y": 0,
    },
  },
}
`;

exports[`DrawingModel goto undos and snapshots 2`] = `
Object {
  "38f95551515cc94f8bb8e37a63954d49": "
RR----RR
--------
--------
--------",
  "43e026a0d11dfafee7d6e881bdc93730": "
RR------
--------
--------
--------",
  "c7f3904bc0462e034c9c59ba4430b183": "
--------
--------
--------
--------",
}
`;

exports[`DrawingModel snapshots tiles test 1`] = `
Object {
  "1": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "43e026a0d11dfafee7d6e881bdc93730",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 0,
      "y": 0,
    },
  },
  "2": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "43e026a0d11dfafee7d6e881bdc93730",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "4490298d7cd311465c6790978bde7ef1",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 5,
      "y": 0,
    },
  },
  "3": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "43e026a0d11dfafee7d6e881bdc93730",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "48826503c76083b0ffde4ba18a7833bd",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "4490298d7cd311465c6790978bde7ef1",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 1,
      "y": 5,
    },
  },
}
`;

exports[`DrawingModel snapshots tiles test 2`] = `
Object {
  "43e026a0d11dfafee7d6e881bdc93730": "
RR------
--------
--------
--------",
  "4490298d7cd311465c6790978bde7ef1": "
--RR----
--------
--------
--------",
  "48826503c76083b0ffde4ba18a7833bd": "
--------
--RR----
--------
--------",
  "c7f3904bc0462e034c9c59ba4430b183": "
--------
--------
--------
--------",
}
`;

exports[`DrawingModel snapshots two batches 1`] = `
Object {
  "7": Object {
    "snapshot": Object {
      "tileSize": 4,
      "tiles": Object {
        "0.0": Object {
          "link": "fec30c95ff6c682f3ef130092e8ea6bf",
          "x": 0,
          "y": 0,
        },
        "0.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 4,
        },
        "0.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 8,
        },
        "0.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 0,
          "y": 12,
        },
        "1.0": Object {
          "link": "61d308b261e508fe4da4c050ad419ec8",
          "x": 4,
          "y": 0,
        },
        "1.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 4,
        },
        "1.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 8,
        },
        "1.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 4,
          "y": 12,
        },
        "2.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 0,
        },
        "2.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 4,
        },
        "2.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 8,
        },
        "2.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 8,
          "y": 12,
        },
        "3.0": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 0,
        },
        "3.1": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 4,
        },
        "3.2": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 8,
        },
        "3.3": Object {
          "link": "c7f3904bc0462e034c9c59ba4430b183",
          "x": 12,
          "y": 12,
        },
      },
    },
    "state": Object {
      "x": 5,
      "y": 1,
    },
  },
}
`;

exports[`DrawingModel snapshots two batches 2`] = `
Object {
  "61d308b261e508fe4da4c050ad419ec8": "
--BB----
--BB----
--------
--------",
  "c7f3904bc0462e034c9c59ba4430b183": "
--------
--------
--------
--------",
  "fec30c95ff6c682f3ef130092e8ea6bf": "
RRRR----
--------
--------
--------",
}
`;
